--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       let personData = [
         {
           id: 1,
-          name: "john",
+          name: "John",
           marks: 50,
         },
         {
